Commit remaining backend changes